syntax = "proto3";

package TokenContract;

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AElf.Contracts.MultiToken";

service TokenContract {
    option (aelf.csharp_state) = "AElf.Contracts.MultiToken.TokenContractState";
    
    rpc Approve (ApproveInput) returns (google.protobuf.Empty) {
    }
    rpc GetBalance (GetBalanceInput) returns (GetBalanceOutput) {
        option (aelf.is_view) = true;
    }
}

message ApproveInput {
    aelf.Address spender = 1;
    string symbol = 2;
    int64 amount = 3;
}

message GetBalanceInput {
    aelf.Address owner = 1;
    string symbol = 2;
}

message GetBalanceOutput {
    string symbol = 1;
    int64 amount = 2;
    aelf.Address owner = 3;
} 